# EnergyAnalyticsPipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
dags/: __init__.py  ingest_dag.py  transform_dag.py
docker/airflow/: Dockerfile
scripts/: generate_sample_data.py  init_db.sh
sql/schema/: 001_create_schemas.sql  002_create_raw_tables.sql  003_create_staging_tables.sql  004_create_analytics_tables.sql  005_create_dq_tables.sql  006_create_indexes.sql  007_seed_dimensions.sql
sql/transforms/analytics/: dim_customer.sql  dim_location.sql  dim_meter.sql  fact_consumption.sql
sql/transforms/staging/: stg_equipment_telemetry.sql  stg_meter_readings.sql  stg_weather_data.sql
src/: __init__.py
src/ingestion/: meter_readings_ingest.py  reference_ingest.py  weather_ingest.py
src/quality/: __init__.py
src/utils/: config.py  db.py  logging_config.py
tests/: conftest.py
tests/unit/: test_ingestion.py  test_transforms.py
